@@ -149,6 +149,20 @@ name|DbEntity
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
+name|DetectedDbEntity
+import|;
+end_import
+
 begin_class
 class|class
 name|DbAttributeMerger
@@ -334,6 +348,38 @@ name|original
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+if|if
+condition|(
+name|original
+operator|.
+name|isPrimaryKey
+argument_list|()
+operator|&&
+name|originalDbEntity
+operator|instanceof
+name|DetectedDbEntity
+operator|&&
+literal|"VIEW"
+operator|.
+name|equals
+argument_list|(
+operator|(
+operator|(
+name|DetectedDbEntity
+operator|)
+name|originalDbEntity
+operator|)
+operator|.
+name|getType
+argument_list|()
+argument_list|)
+condition|)
+block|{
+comment|// Views doesn't has PKs in a database, but if the user selects some PKs in a model, we put these keys.
+return|return
+literal|null
+return|;
 block|}
 return|return
 name|tokens
