@@ -562,6 +562,29 @@ operator|instanceof
 name|DetectedDbEntity
 condition|)
 block|{
+if|if
+condition|(
+literal|"VIEW"
+operator|.
+name|equals
+argument_list|(
+operator|(
+operator|(
+name|DetectedDbEntity
+operator|)
+name|imported
+operator|)
+operator|.
+name|getType
+argument_list|()
+argument_list|)
+condition|)
+block|{
+comment|// Views doesn't has PKs in a database, but if the user selects some PKs in a model, we put these keys.
+return|return
+literal|null
+return|;
+block|}
 name|primaryKeyName
 operator|=
 operator|(
