@@ -30,6 +30,10 @@ specifier|protected
 name|String
 name|primaryKeyName
 decl_stmt|;
+specifier|protected
+name|String
+name|type
+decl_stmt|;
 specifier|public
 name|DetectedDbEntity
 parameter_list|(
@@ -42,6 +46,30 @@ argument_list|(
 name|name
 argument_list|)
 expr_stmt|;
+block|}
+specifier|public
+name|void
+name|setType
+parameter_list|(
+name|String
+name|type
+parameter_list|)
+block|{
+name|this
+operator|.
+name|type
+operator|=
+name|type
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getType
+parameter_list|()
+block|{
+return|return
+name|type
+return|;
 block|}
 comment|/**      * Sets the optional primary key name of this DbEntity. This is not the same as the      * name of the DbAttribute, but the name of the unique constraint.      */
 specifier|public
